--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="W:\Career\GIT-SMART-C\17-dec-preperation\style.css">
 </head>
 <body>
     
+    <p class="center">this paragraph</p>
+    <p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p><p class="center">this paragraph</p>
+    <p class="center">this paragraph</p>
+    <p class="center">this paragraph</p>
 </body>
 </html>
