make some div to check marging

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="W:\Career\GIT-SMART-C\17-dec-preperation\style.css">
 </head>
 <body>
-    
+    <div class="cont"> 
+        <div class="in-cont">
     <p class="center">this paragraph</p>
-    <p class="center">this paragraph</p>
+    <!-- <p class="center">this paragraph</p>
     <p class="center">this paragraph</p><p class="center">this paragraph</p>
     <p class="center">this paragraph</p><p class="center">this paragraph</p>
     <p class="center">this paragraph</p><p class="center">this paragraph</p>
@@ -21,6 +22,12 @@
     <p class="center">this paragraph</p><p class="center">this paragraph</p>
     <p class="center">this paragraph</p><p class="center">this paragraph</p>
     <p class="center">this paragraph</p>
-    <p class="center">this paragraph</p>
+    <p class="center">this paragraph</p> -->
+</div>
+</div>
+
+<div class="mcheck">
+    <div class="in"></div>
+</div>
 </body>
 </html>
