adding two more divs to check max-width

--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
     <p class="center">this paragraph</p> -->
 </div>
 </div>
+<div class="cont1"> 
+    <div class="in-cont">
+<p class="center">this paragraph</p>
+<!-- <p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p><p class="center">this paragraph</p>
+<p class="center">this paragraph</p>
+<p class="center">this paragraph</p> -->
+</div>
+</div>
 
 <div class="mcheck">
     <div class="in"></div>
