text formating done with also shadow

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div style="width: 700px; height: 400px; background-color: rgb(228, 231, 231); display: flex;">
        
         <p class="center" style="color: black;">this paragraph <img src="sky.jpg" width="100px" height="70px" style="vertical-align: bottom;">
-            <span style="text-decoration: line-through; text-transform: uppercase;"> Lorem ipsum dolor sit</span> </p>
+            <span style="text-decoration: line-through; text-transform: uppercase; letter-spacing: 2px; line-height: 1px; word-spacing: 5px;"> Lorem ipsum dolor sit</span> </p>
     </div>
     </div>
 
