--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    
     <div class="links">
-        <a href="#">this is link</a>
+        <a class="anchor" href="#">this is link</a>
     </div>
 
 
