--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    
-    <div class="links">
+    <!-- <div class="links">
         <a class="anchor" href="#">this is link</a>
     </div>
 <!-- <ul class="alist">
@@ -88,7 +88,7 @@
               <td>France</td>
             </tr>
           </table>
-        </div>
+        </div> -->
 
 
 </body>
