--- a/index.html
+++ b/index.html
@@ -8,88 +8,11 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-   
-    <!-- <div class="links">
-        <a class="anchor" href="#">this is link</a>
-    </div>
-<!-- <ul class="alist">
-<li>a</li>
-<li>b</li>
-<li>c</li>
-<li>d</li>
-</ul> -->
-<ul class="blist">
-    <li>a</li>
-    <li>b</li>
-    <li>c</li>
-    <li>d</li>
-    </ul>
-    <ul class="clist">
-        <li>a</li>
-        <li>b</li>
-        <li>c</li>
-        <li>d</li>
-        </ul>
-        <div class="tab">
-        <table id="customers">
-            <tr>
-              <th>Company</th>
-              <th>Contact</th>
-              <th>Country</th>
-            </tr>
-            <tr>
-              <td>Alfreds Futterkiste</td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
-            </tr>
-            <tr>
-              <td>Berglunds snabbköp</td>
-              <td>Christina Berglund</td>
-              <td>Sweden</td>
-            </tr>
-            <tr>
-              <td>Centro comercial Moctezuma</td>
-              <td>Francisco Chang</td>
-              <td>Mexico</td>
-            </tr>
-            <tr>
-              <td>Ernst Handel</td>
-              <td>Roland Mendel</td>
-              <td>Austria</td>
-            </tr>
-            <tr>
-              <td>Island Trading</td>
-              <td>Helen Bennett</td>
-              <td>UK</td>
-            </tr>
-            <tr>
-              <td>Königlich Essen</td>
-              <td>Philip Cramer</td>
-              <td>Germany</td>
-            </tr>
-            <tr>
-              <td>Laughing Bacchus Winecellars</td>
-              <td>Yoshi Tannamuri</td>
-              <td>Canada</td>
-            </tr>
-            <tr>
-              <td>Magazzini Alimentari Riuniti</td>
-              <td>Giovanni Rovelli</td>
-              <td>Italy</td>
-            </tr>
-            <tr>
-              <td>North/South</td>
-              <td>Simon Crowther</td>
-              <td>UK</td>
-            </tr>
-            <tr>
-              <td>Paris spécialités</td>
-              <td>Marie Bertrand</td>
-              <td>France</td>
-            </tr>
-          </table>
-        </div> -->
 
-
+<div class="main">
+    <div class="main-1"></div>
+    <div class="main-2"></div>
+    <div class="main-3"></div>
+</div>
 </body>
 </html>
