--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+<p id="para">this is first paragrapgh</p>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="W:\Career\GIT-SMART-C\17-dec-preperation\js.js"></script>
+<script src="W:\Career\GIT-SMART-C\mcqs\mcqs\jquery.js"></script>    
+<script src="W:\SOFTWARES\bootstrap-4.5.3-dist\bootstrap-4.5.3-dist\js\bootstrap.min.js"></script>
 </body>
 </html>
