--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-<p id="para" >this is first paragrapgh</p>
+<h1 id="para" >this is first paragrapgh</h1>
 <button type="button" onclick="check1()">chage html</button>
 
 
